--- a/css/estilo.css
+++ b/css/estilo.css
@@ -7,11 +7,13 @@ html {
     background-image: linear-gradient(to bottom right, #bbf, #bfb);
 }
 body {
-    padding:3% 40px;
+    padding:0;
     margin:0;
     text-align:center;
+    height:100vh;
     display:flex;
     justify-content:center;
+    align-items:center;
 }
 
 header p {
