--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,3 +1,5 @@
+@CHARSET "UTF-8";
+
 @import url('https://fonts.googleapis.com/css2?family=Asap:wght@400;700&display=swap');
 
 * {font-family:'Asap', serif; }
@@ -75,4 +77,22 @@ footer a:hover {
 }
 footer .cnt {
     padding:30px 20px 15px 20px;
+}
+
+a.github_repositorio {
+    position:fixed;
+    bottom:5px;
+    left:5px;
+    opacity:.6;
+    overflow:hidden;
+    background-image:url(../img/github_face.svg);
+    background-size:100% auto;
+    background-repeat:no-repeat;
+    background-position:center;
+    width:30px;
+    height:30px;
+    background-color:transparent;
+}
+a.github_repositorio:hover {
+    opacity:1;
 }
